cmake_minimum_required(VERSION 3.25)
project(C C)

set(CMAKE_C_STANDARD 11)

include_directories(?????/??????/????)

add_executable(C
        ?????/??????/Demo/Demo01.c
        ?????/??????/Demo/?????????.c
        ?????/??????/Demo/??????????.c
        ?????/??????/????/Btree.c
        ?????/??????/????/Btree.h
        ?????/??????/????/test.c
        ?????/?????????/???.c
        ?????/?????????/???????????.c
        ??/???????.c
        ??/????????.c
        C:/Users/Administrator/AppData/Roaming/JetBrains/CLion2023.1/scratches/1.c ????/?????/test.c C:/Users/Administrator/AppData/Roaming/JetBrains/CLion2023.1/scratches/1.c ????/?????/1.c ????/?????/output/1.c ????/?????/output/1.c ????/???/Demo01.c ????/???/Demo01.c ????/???/Demo01.c ????/???/Demo01.c ????/???/??????.c ????/???/??????.c ????/???/test.c ????/???/Book_Management_System.h "????/???/Book_Management_System.cpp .cpp" ????/???/main.cpp ????/???/main.cpp "????/???/Book_Management_System.cpp .cpp" "????/???/Book_Management_System.cpp .cpp" "????/???/Book_Management_System.cpp .cpp")
